<resources>
    <string name="app_name">Practica</string>
    <string name="tv_correo">Correo</string>
    <string name="tv_clave">Contraseña</string>
    <string name="tv_fallo">Error...</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_lugar">Lugares</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="msg_nombre">Nombre del estado</string>
    <string name="msg_correo">Nombre de la Capital</string>
    <string name="msg_web">Continente</string>
    <string name="msg_poblacion">Número de habitantes</string>
    <string name="msg_departamentos">Número de departamentos</string>
    <string name="msg_add_lugar">Agregar Lugar</string>
    <string name="bt_uptate_lugar">Actualizar Lugar</string>
    <string name="msg_lugar_added">Estado Agregado…</string>
    <string name="msg_delete_lugar">Eliminar Estado…</string>
    <string name="msg_lugar_updated">Lugar Actualizado…</string>
    <string name="msg_lugar_deleted">Estado Eliminado…</string>
    <string name="msg_data">Faltan Datos!</string>
    <string name="msg_seguro_borrado">¿Está seguro de eliminar el estado :</string>
    <string name="msg_si">Si</string>
    <string name="msg_no">No</string>

    <string name="msg_enviar_correo">Enviar correo electrónico</string>
    <string name="msg_phone_call">Realizar llamada telefónica</string>
    <string name="msg_whatsapp_send">Enviar mensaje WhatsApp</string>
    <string name="msg_web_view">Abrir sitio Web</string>
    <string name="msg_map_view">Ver lugar en mapa</string>
    <string name="tv_latitud_lb">Latitud</string>
    <string name="tv_longitud_lb">Longitud</string>
    <string name="tv_altura_lb">Altura</string>
    <string name="msg_saludos">Saludos amigos</string>
    <string name="msg_mensaje_correo">Le escribo este correo para</string>
    <string name="msg_datos">Faltan datos</string>
    <string name="error">Error</string>
    <string name="title_activity_central">CentralActivity</string>

    <string name="menu_home">Home</string>

</resources>