<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10sp"
    tools:context=".ui.home.UpdateEstadoFragment">


    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_nombre"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_correo_lugar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_correo"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/et_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_poblacion"
        android:inputType="phone" />

    <EditText
        android:id="@+id/et_web"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_web"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_poblacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_departamentos"
        android:inputType="number" />

    <Button
        android:id="@+id/bt_delete_lugar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_delete_lugar" />

    <Button
        android:id="@+id/bt_update_lugar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_uptate_lugar" />



</LinearLayout>