<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="utn.practica.heiner.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_addEstadoFragment"
            app:destination="@id/addEstadoFragment" />
        <action
            android:id="@+id/action_nav_home_to_updateEstadoFragment"
            app:destination="@id/updateEstadoFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="utn.practica.heiner.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="utn.practica.heiner.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/addEstadoFragment"
        android:name="utn.practica.heiner.AddEstadoFragment"
        android:label="fragment_add_estado"
        tools:layout="@layout/fragment_add_estado" >
        <action
            android:id="@+id/action_addEstadoFragment_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/updateEstadoFragment"
        android:name="utn.practica.heiner.updateEstadoFragment"
        android:label="fragment_update_estado"
        tools:layout="@layout/fragment_update_estado" >
        <action
            android:id="@+id/action_updateEstadoFragment_to_nav_home"
            app:destination="@id/nav_home" />
        <argument
            android:name="estado"
            app:argType="utn.practica.heiner.model.Estado" />
    </fragment>
</navigation>